--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,10 @@
 <resources>
     <string name="app_name">dayShock</string>
+    <string name="nav_home">Home</string>
+    <string name="nav_challenge">Challenge</string>
+    <string name="nav_write">Write</string>
+    <string name="nav_setting">Setting</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
